components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "weejewel/wg-easy:latest"
          imagePullPolicy: Always
          ports:
            - name: listen
              containerPort: 51820
              protocol: UDP
            - name: dashboard
              containerPort: 51821
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /etc/wireguard
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
