components/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: udp-svc
spec:
  type: LoadBalancer
  ports:
    - name: wireguard
      port: 51820
      targetPort: listen
      protocol: UDP
